--- a/index.css
+++ b/index.css
@@ -1,112 +1,43 @@
-/* ELEMENT STYLING */
+/*////////////////////////
+///// MASTER WRAPPER /////
+////////////////////////*/
 
-body {
-    font-family: 'Press Start 2P', cursive;
-    background-color: #000000;
-    background-size: cover;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: bold;
-    text-align: left;
-    /* OUTER BODY BACKGROUND COLOR */
-    color: #4A4E74;
-}
-
-table {
-    width: 100%;
-}
-
-th {
-    font-weight: 700;
-    font-size: 12px;
-    line-height: 20px; 
-    color:#D5D4D8;
+#zu {
+    color: #ffffff;
+    margin: 10px 0px 0px 12px;
     text-transform: uppercase;
 }
 
-hr {
-    margin: 20px 0px;
+body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* OUTER BODY BACKGROUND COLOR */
+    background-color: #000000; 
+    background-size: cover;
 }
-
-#add-services table tr td {
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 20px;
-}
-
-.th-style-01,
-.th-style-02 {  
-    color: #918E9B;
-}
-
-.th-style-02 {
-    text-align: right;
-    
-}
-
-.service-style td {
-    padding: 10px 0px;
-}
-
-#remove-wc-service,
-#remove-ml-service,
-#remove-pw-service  {
-    font-weight: 400;
-    font-size: 8px;
-    line-height: 20px;
-    cursor: pointer;
-}
-
-.money-style {
-    font-size: 24px;
-    line-height: 20px;
-    text-align: right;
-}
-
-.money-style span {
-    font-weight: 300;
-    color: #918E9B;
-}
-
-#note {
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 15px;
-    color: #4A4E74;
-}
-
-
-#total-amount {
-    font-size: 40px;
-    text-align: right;
-}
-
-
-
-/* CONTAINERS & WRAPPERS STYLING */
 
 #wrapper {
     display: flex;
     flex-direction:column;
     justify-content: center;
     align-items: center;
-    height: 97vh;
+    height: 96vh;
     /* INNER BODY BACKGROUND COLOR */
     background: #111111;
     border-radius: 20px;
     margin: 23px 12px 0px 12px;
 }
 
-#container {
-    /* APP BACKGROUND COLOR */
-    background: #f7f7f7;
-    border-radius: 0px 0px 20px 20px;
-    min-width: 500px;
-    padding: 50px;
+hr {
+    margin-bottom: 20px;
 }
 
-/* CONTAINERS & WRAPPERS STYLING */
 
-#title-section {
+
+/*///////////////////////
+///// TITLE SECTION /////
+///////////////////////*/
+
+#title-container {
     background-color: #dbdbdb;
     border-radius: 20px 20px 0px 0px;
     min-width: 500px;
@@ -116,17 +47,31 @@ hr {
     color: #2B283A;
 }
 
-#title-section h1 {
+#title-container h1 {
     font-weight: 800;
     font-size: 40px;
     line-height: 0px;
     letter-spacing: -0.02em;
 }
 
-#title-section p {
+#title-container p {
     font-weight: 400;
     font-size: 16px;
     line-height: 28px;
+}
+
+
+
+/*/////////////////////////
+///// SERVICE BUTTONS /////
+/////////////////////////*/
+
+#service-container {
+    /* APP BACKGROUND COLOR */
+    background: #f7f7f7;
+    border-radius: 0px 0px 20px 20px;
+    min-width: 500px;
+    padding: 50px;
 }
 
 #service-blocks {
@@ -138,15 +83,124 @@ hr {
     margin-bottom: 30px;
 }
 
-#s-block-01,
-#s-block-02,
-#s-block-03 {
+#service-blocks button:hover {
+    cursor: pointer;
+    color: red;
+}
+
+#wash-car,
+#mow-lawn,
+#pull-weeds {
     border: 1px solid #D5D4D8;
     border-radius: 5px;
     padding: 10px 20px;
     font-size:16px;
 }
 
+
+
+/*/////////////////////////
+///// SERVICE WRAPPER /////
+/////////////////////////*/
+
+#service-wrapper,
+#amount-wrapper {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 20px;
+}
+
+#amount-wrapper {
+    margin-bottom: 20px;
+}
+
+#service-column-left,
+#amount-column-left {
+    text-align: left;
+}
+
+#service-column-right,
+#amount-column-right {
+    text-align: right;
+}
+
+#task-title,
+#total-title,
+#notes-title,
+#total-amount-title {
+    margin-bottom: 20px;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 12px; 
+    text-transform: uppercase;
+    color: #918E9B;
+}
+
+.service-task,
+.service-total {
+    margin-bottom: 15px;
+}
+
+
+.service-task button {
+    padding: 0;
+    border: none;
+    background: none;
+    font-weight: 400;
+    font-size: 8px;
+    line-height: 20px;
+    cursor: pointer;
+    
+}
+
+#task-container-one button {
+    padding: 0;
+    border: none;
+    background: none;
+    font-weight: 400;
+    font-size: 8px;
+    line-height: 20px;
+    cursor: pointer;
+    
+}
+
+#total-container-one span {
+    font-weight: 400;
+    color: #918E9B;
+}
+
+
+.service-task span,
+.service-task button {
+    line-height:0px;
+}
+
+
+.service-total span {
+    font-weight: 400;
+    color: #918E9B;
+}
+
+#note {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 15px;
+    color: #4A4E74;
+}
+
+#total-amount {
+    font-size: 40px;
+    text-align: right;
+}
+
+
+
+/*/////////////////////////////
+///// SEND INVOICE BUTTON /////
+/////////////////////////////*/
 
 .send-invoice {
     display: flex;
@@ -161,37 +215,6 @@ hr {
     margin-top: 40px;
     cursor: pointer;
     
-}
-
-
-#output-01,
-#output-02,
-#output-03,
-#output-04 {
-    color: #E11D48;
-    font-family: 'Inter', sans-serif;
-    font-weight: 500;
-    font-size: 0.9em;
-    margin-top: 18px;
-    margin-left: 15px;
-
-}
-
-.password-button {
-    display: flex;
-    flex-direction:row;
-    flex-wrap: wrap;
-    height: 50px;
-    padding: 0;
-    background: #d1d3d1;
-    border: none;
-    outline: none;
-    border-radius: 5px;
-    overflow: hidden;
-    font-family: 'Quicksand', sans-serif;
-    font-weight: 500;
-    cursor: pointer;
-    width: 100%;
 }
 
 .copy-icon{
